--- a/template/buildreport.html
+++ b/template/buildreport.html
@@ -2,6 +2,15 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<title>mruby build & test report</title>
+		<style>
+			pre {
+				white-space: -moz-pre-wrap; /* Mozilla */
+				white-space: -pre-wrap;     /* Opera 4-6 */
+				white-space: -o-pre-wrap;   /* Opera 7 */
+				white-space: pre-wrap;      /* CSS3 */
+				word-wrap: break-word;      /* IE 5.5+ */
+			}
+		</style>
 	</head>
 	<body>
 		<h1>mruby build & test report (<%= id %>)</h1>
@@ -17,7 +26,7 @@
 			<% report = reports[hostname] %>
 			<% style = (report.make[:status] == 'success' and report.make_test[:status] == 'success') ? 'background-color:#99ff99' : 'background-color:#ff9999' %>
 			<tr style="<%= style %>">
-				<td><%= report.hostname %></td>
+				<td><a href="#<%= report.hostname %>"><%= report.hostname %></a></td>
 				<td><%= report.make[:status] %></td>
 				<td><%= report.test[:status] %></td>
 				<td><%= report.test[:total] %></td>
@@ -43,7 +52,7 @@
 			<% report = reports[hostname] %>
 			<% style = report.posix[:status] == 'success' ? 'background-color:#99ff99' : 'background-color:#ff9999' %>
 			<tr style="<%= style %>">
-				<td><%= report.hostname %></td>
+				<td><a href="#<%= report.hostname %>"><%= report.hostname %></a></td>
 				<td><%= report.status %></td>
 				<td><%= report.posix[:total] %></td>
 				<td><%= report.posix[:ok] %></td>
@@ -63,7 +72,8 @@
 				<th>Name</th>
 				<th>software version</th>
 			</tr>
-			<% reports.each do |hostname, report| %>
+			<% reports.keys.sort.each do |hostname| %>
+			<% report = reports[hostname] %>
 			<tr>
 				<td rowspan="3"><%= report.hostname %></td>
 				<td><b>gcc</b><br/><pre><%= report.env[:gcc][:stdout] %></pre></td>
@@ -72,5 +82,35 @@
 			<tr><td><b>bison</b><br/><pre><%= report.env[:bison][:stdout] %></pre></td></tr>
 			<% end %>
 		</table>
+
+		<h2>Build Log</h2>
+		<% reports.keys.sort.each do |hostname| %>
+		<% report = reports[hostname] %>
+		<h3><a name="<%= hostname %>"><%= hostname %></a></h3>
+		<table border='1'>
+			<tr>
+				<th>task</th>
+				<th>stdout</th>
+				<th>stderr</th>
+			</tr>
+			<tr>
+				<th>make</th>
+				<td><pre><%= report.make[:stdout] %></pre></td>
+				<td><pre><%= report.make[:stderr] %></pre></td>
+			</tr>
+			<tr>
+				<th>make test</th>
+				<td><pre><%= report.make_test[:stdout].gsub('.'*100, '.'*100 + ' ') %></pre></td>
+				<td><pre><%= report.make_test[:stderr] %></pre></td>
+			</tr>
+			<% if report.posix %>
+				<tr>
+					<th>posix test</th>
+					<td><pre><%= report.posix[:stdout] %></pre></td>
+					<td><pre><%= report.posix[:stderr] %></pre></td>
+				</tr>
+			<% end %>
+		</table>
+		<% end %>
 	</body>
 </html>
