--- a/template/buildreport.html.erb
+++ b/template/buildreport.html.erb
@@ -26,7 +26,7 @@
     <h2>mrbtest</h2>
     <table border="1">
       <tr>
-        <% %w(Name Build-Status Mrbtest-Status Total OK KO Crash Time Fail Msg).each do |key| %>
+        <% %w(Name Build-Status Mrbtest-Status Total OK KO Crash Fail Msg).each do |key| %>
           <th><%= key %></th>
         <% end %>
       </tr>
@@ -41,7 +41,6 @@
           <td><%= report.test[:ok] %></td>
           <td><%= report.test[:ko] %></td>
           <td><%= report.test[:crash] %></td>
-          <td><%= report.test[:time] %></td>
           <td><%= report.test[:fail].join('<br/>') %></td>
           <td><%= report.test[:msg].join('<br/>') %></td>
         </tr>
@@ -52,7 +51,7 @@
       <h2>posix test</h2>
       <table border="1">
         <tr>
-          <% %w(Name Status Total OK KO Crash Time Fail Msg).each do |key| %>
+          <% %w(Name Status Total OK KO Crash Fail Msg).each do |key| %>
             <th><%= key %></th>
           <% end %>
         </tr>
@@ -66,7 +65,6 @@
             <td><%= report.posix[:ok] %></td>
             <td><%= report.posix[:ko] %></td>
             <td><%= report.posix[:crash] %></td>
-            <td><%= report.posix[:time] %></td>
             <td><%= report.posix[:fail].join('<br/>') %></td>
             <td><%= report.posix[:msg].join('<br/>') %></td>
           </tr>
