update buildreport template

--- a/template/buildreport.html.erb
+++ b/template/buildreport.html.erb
@@ -22,6 +22,7 @@
     <% user, repo, comm = id.split('-') %>
     <% url = "http://github.com/#{user}/#{repo}/commit/#{comm}" %>
     <h1>mruby build & test report (<a href="<%= url %>" target="_blank"><%= id %></a>)</h1>
+    <a href="#{id}.html">back to list</a>
 
     <h2>mrbtest</h2>
     <table border="1">
