--- a/template/repository.html.erb
+++ b/template/repository.html.erb
@@ -10,7 +10,7 @@
         <% if repo == reponame %>
           <b><%= repo %></b>
         <% else %>
-          <a href="<%= repo %>.html" target="body"><%= repo %></a>
+          <a href="<%= reponame %>.html"><%= reponame %></a>
         <% end %>
       <% end %>
     </div>
