--- a/template/buildreport.html.erb
+++ b/template/buildreport.html.erb
@@ -22,7 +22,7 @@
     <div style="background-color:#a0a0a0;">
       <% @gitlog.each do |reponame, val| %>
         <% filepath = File.join(REPORT_DIR, "#{reponame}.html") %>
-        <a href="<%= reponame %>.html" target="body"><%= reponame %></a>
+        <a href="<%= reponame %>.html"><%= reponame %></a>
       <% end %>
     </div>
 
